(Format: Year/Month/Day)
Changes for 0.9.11
*04/09/09:
  * tidy+replace qiv with display in screenshot, add jpg option (Han)
    fluxbox-generate_menu.in
  * Added forgotten [macrocmd] to menuitems (Mathias)
    MenuCreator.cc
  * Cleanup of code (Mathias)
    - removed codeduplicates of ::getRootPixmap, added FbPixmap::getRootPixmap instead
    Screen.(cc|hh) FbTk/Menu.cc FbTk/FbWindow.cc FbTk/FbPixmap.cc
*04/09/04:
  * Fix duplicate icons in icon list with amsn (Henrik)
    - Check Fluxbox::update(FluxboxWindow::stateSig), 
      the win.screen().addIcon 
    Screen.cc
  * Fix crash on shutdown (Henrik)
    - workspacemenu must be destroyed before
      clientlists
    Screen.cc
*04/09/03:
  * Fix crash on startup on amd64 (Simon)
    - We may need to review usages of 0 as opposed to NULL
    - Thanks to Jason Johnston (xoritor) for assistance debugging
    XmbFontImp.cc
  * Added -nearmouse to FbRun (Mathias)
    main.cc
*04/09/02:
  * Fix crash when in windowmenu->submenu and closing the app (Mathias)
    Remember.cc
-------------------------------------------------------
Changes for 0.9.10:
*04/09/01:
  * Fix width of a menuentry (Mathias)
    FbTk/MenuItem.cc
*04/08/31:
  * Fixed restart issue with system tray (Henrik)
    SystemTray.cc
  * Fixed multiple screen issues with system tray (Henrik)
    SystemTray.cc
  * Check for iconv function (Henrik)
    configure.in, Font.hh/cc
  * Fix for gcc 2.95.4 issues with "typeid" and "make_pair",
    Fix for a MIPSPro 7.30 issue (Mathias)
    Slit.cc Toolbar.cc FbTk/KeyUtil.cc
  * Check for C++ std headers, some older machines dont have them (Simon)
    configure.in  src/<MANY>.hh/cc
*04/08/30:
  * Changed session.screen<num>.iconbar.clientWidth to
    session.screen<num>.iconbar.iconWidth
    (Henrik)
    IconbarTool.cc
  * Added RaiseLayer and LowerLayer to the commands (Mathias)
    FbCommandFactory.cc
  * Close bug #1013735, #1012314, #977054 (Mathias)
    Screen.cc Slit.cc FbCommands.cc